--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.36",
     "@solana/web3.js": "^1.98.2",
     "framer-motion": "^12.11.3",
+    "next": "^14.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
